compiler/e2e/test/snapshot/borrow_checker/polonius_example_two/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: mutable access is done while it is borrowed
   ╭─ compiler/e2e/test/snapshot/borrow_checker/polonius_example_two/main.pnx:29:5
   │
27 │     p.push(&x)
   │            -- the borrow starts here
28 │ 
29 │     x = 3
   │     ^^^^^ mutable access occurs here
30 │ 
31 │     consume(v)
   │             - the borrow is used here

error: Compilation aborted due to 1 error(s)



stdout:
